Bug 415211 - Changing font size in the title or axis will convert subscript and super script to normal text.
Summary: Changing font size in the title or axis will convert subscript and super scri...
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.7.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-15 17:43 UTC by Andy Great
Modified: 2020-03-28 18:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments
Example file for testing bug. (32.34 KB, application/x-labplot2)
2019-12-15 17:43 UTC, Andy Great
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andy Great 2019-12-15 17:43:41 UTC
Created attachment 124509 [details]
Example file for testing bug.

Changing font size in the title or axis will convert subscript and super script to normal text.

1. Open the example file.
2. Change the font size of the x-axis or y-axis
3. Subscript and super script become normal text.

Expected Result.
The text should remain superscript and subscript.

labplot-kf5-2.7.0-1.3

Operating System: openSUSE Tumbleweed 20191207
KDE Plasma Version: 5.17.3
KDE Frameworks Version: 5.64.0
Qt Version: 5.13.1
Kernel Version: 5.3.12-1-default
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-3770 CPU @ 3.40GHz
Memory: 7.5 GiB of RAM
Comment 1 Alexander Semke 2020-03-28 18:47:19 UTC
Git commit 0b50a6f5908d0ea7fd7e7000f3a53acedf17dfc8 by Alexander Semke.
Committed on 28/03/2020 at 18:46.
Pushed by asemke into branch 'master'.

[worksheet] don't touch sub- and super-script format in TextLabel when
changing the font.
FIXED-IN: 2.8

M  +2    -2    src/kdefrontend/widgets/LabelWidget.cpp

https://invent.kde.org/kde/labplot/commit/0b50a6f5908d0ea7fd7e7000f3a53acedf17dfc8