[worksheet] don't touch sub- and super-script format in TextLabel when changing the font.

BUG: 415211
FIXED-IN: 2.8